Added readme info

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">hahaha</h2>
+        <h2 class="card-title">Shaun</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:akmkmaka">akmkmaka</a></li>
-            <li class="list-group-item">Office number: lmalmlma</li>
+            <li class="list-group-item">Email: <a href="mailto:shaun123@gmail.com">shaun123@gmail.com</a></li>
+            <li class="list-group-item">Office number: 226</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">kamkmdkfmakmfkas</h2>
+        <h2 class="card-title">Audrey</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:ksamdkamkdmas">ksamdkamkdmas</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/kamdkmakdma" target="_blank" rel="noopener noreferrer">kamdkmakdma</a></li>
+            <li class="list-group-item">Email: <a href="mailto:audrey123@gmail.com">audrey123@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/audreycodeswell" target="_blank" rel="noopener noreferrer">audreycodeswell</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">akalmma</h2>
+        <h2 class="card-title">Shayanne</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:akngonakfnadknf">akngonakfnadknf</a></li>
-            <li class="list-group-item">School: akskamkam</li>
+            <li class="list-group-item">Email: <a href="mailto:shayanne123@gmail.com">shayanne123@gmail.com</a></li>
+            <li class="list-group-item">School: the school of hard knocks</li>
         </ul>
     </div>
 </div>
