Added video link to readme

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -32,7 +32,7 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
             <li class="list-group-item">Email: <a href="mailto:shaun123@gmail.com">shaun123@gmail.com</a></li>
-            <li class="list-group-item">Office number: 226</li>
+            <li class="list-group-item">Office number: 667</li>
         </ul>
     </div>
 </div>
@@ -44,8 +44,8 @@
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 3</li>
-            <li class="list-group-item">Email: <a href="mailto:audrey123@gmail.com">audrey123@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/audreycodeswell" target="_blank" rel="noopener noreferrer">audreycodeswell</a></li>
+            <li class="list-group-item">Email: <a href="mailto:audrey@123@gmail.com">audrey@123@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/audreycodeWell" target="_blank" rel="noopener noreferrer">audreycodeWell</a></li>
         </ul>
     </div>
 </div>
@@ -58,7 +58,7 @@
         <ul class="list-group">
             <li class="list-group-item">ID: 2</li>
             <li class="list-group-item">Email: <a href="mailto:shayanne123@gmail.com">shayanne123@gmail.com</a></li>
-            <li class="list-group-item">School: the school of hard knocks</li>
+            <li class="list-group-item">School: The School of Hard Knocks</li>
         </ul>
     </div>
 </div>
